<resources>
    <string name="app_name">MyTestUtil</string>
    <string name="mmm_util_test">我的工具参考模板</string>
    <string name="mmm_vp2">ViewPager2</string>
    <string name="mmm_glide">Glide图片加载</string>
    <string name="mmm_base_quick_adapter">双表联动</string>
    <string name="mmm_drawer">抽屉布局</string>
    <string name="mmm_nested_recycler">rv嵌套vp再嵌套rv</string>
    <string name="mmm_rv_in_recycler">rv嵌套rv</string>
    <string name="mmm_load_more">上滑加载更多</string>
    <string name="mmm_web_view">WebViewTest</string>
    <string name="mmm_send_request">发送请求</string>

    <string name="mmm_sort">分类</string>
    <string name="mmm_search">搜索</string>
    <string name="mmm_phone">1735653435</string>
    <string name="mmm_myphone">144234341</string>
    <string name="mmm_normal_user">普通用户</string>
    <string name="mmm_unconfirm">未认证</string>
    <string name="mmm_fruit">水果</string>

    <string name="mmm_personInfor">个人资料</string>
    <string name="mmm_identity">身份认证</string>
    <string name="mmm_setting">设置</string>
    <string name="mmm_left_drawer">左侧抽屉</string>
    <string name="mmm_top_drawer">顶部抽屉</string>
    <string name="mmm_goods_label">商品标签</string>
    <string name="mmm_new">新品</string>
    <string name="mmm_flash_3">限时购</string>
    <string name="mmm_new_man">新人专享</string>
    <string name="mmm_special">特价</string>
    <string name="mmm_hot">热卖</string>
    <string name="mmm_reset">重置</string>
    <string name="mmm_ok">完成</string>
    <string name="mmm_discount">折扣</string>
    <string name="mmm_nested_pro">嵌套Rv的滑动冲突</string>
    <string name="mmm_event_bus">EventBus</string>
    <string name="mmm_receiver">从Main接受的message</string>
    <string name="mmm_receive2">接受到的第二条消息</string>
    <string name="mmm_classics_md">经典MD风格布局</string>
    <string name="mmm_popupwindow">PopupWindow</string>
    <string name="mmm_play_music">音乐播放</string>
    <string name="mmm_todo">todo...</string>
    <string name="mmm_broadcast">广播机制</string>
    <string name="retrofit">retrofit网络请求</string>
    <string name="mmm_get">GET</string>
    <string name="mmm_post">POST</string>
    <string name="life_cycle">生命周期</string>
    <string name="life_cycle_test">生命周期测试界面</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">登录</string>
    <string name="Scrolling">Scrolling</string>
    <string name="okHttp">OkHttp</string>
    <string name="algorithm">算法</string>
    <string name="sort">排序</string>
    <string name="bubble">冒泡排序</string>
    <string name="choose">选择排序</string>
    <string name="insert">插入排序</string>
    <string name="shell">希尔排序</string>
    <string name="merge">归并排序</string>
    <string name="quick">快速排序</string>
    <string name="heap">堆排序</string>
    <string name="counting">计数排序</string>
    <string name="bucket">桶排序</string>
    <string name="radix">基数排序</string>
    <string name="input">请输入排序个数：</string>
    <string name="create_num">随机生成未排序的数：</string>
    <string name="sort_result">排序结果：</string>
</resources>
