<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/algorithm"
        android:textColor="@color/color3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sort"
        android:textColor="@color/color3"
        android:layout_marginStart="@dimen/dp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:layout_marginLeft="@dimen/dp_12" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="6"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSort">

        <TextView
            android:id="@+id/tvBubble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_marginLeft="@dimen/mmm_font_s10"
            android:background="@color/color10"
            android:padding="10dp"
            android:text="@string/bubble"
            android:textColor="@drawable/state_selected_c3_c23" />

        <TextView
            android:id="@+id/tvChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/color10"
            android:padding="10dp"
            android:text="@string/choose"
            android:textColor="@drawable/state_selected_c3_c23" />

        <TextView
            android:id="@+id/tvInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color10"
            android:padding="10dp"
            android:layout_marginLeft="@dimen/mmm_font_s10"
            android:text="@string/insert"
            android:layout_marginRight="@dimen/mmm_font_s10"
            android:lines="1"
            android:textColor="@drawable/state_selected_c3_c23" />

        <TextView
            android:id="@+id/tvShell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_rowWeight="1"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/color10"
            android:padding="10dp"
            android:text="@string/shell"
            android:textColor="@drawable/state_selected_c3_c23" />

        <TextView
            android:id="@+id/merge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_rowWeight="1"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/color10"
            android:padding="10dp"
            android:text="@string/merge"
            android:textColor="@drawable/state_selected_c3_c23"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/tvQuick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/color10"
            android:padding="10dp"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/quick"
            android:textColor="@drawable/state_selected_c3_c23" />


        <TextView
            android:id="@+id/tvHeap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color10"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="10dp"
            android:layout_marginLeft="@dimen/mmm_font_s10"
            android:text="@string/heap"
            android:layout_marginRight="@dimen/mmm_font_s10"
            android:textColor="@drawable/state_selected_c3_c23" />

        <TextView
            android:id="@+id/tvCounting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/color10"
            android:padding="10dp"
            android:text="@string/counting"
            android:textColor="@drawable/state_selected_c3_c23" />

        <TextView
            android:id="@+id/tvBucket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/color10"
            android:padding="10dp"
            android:text="@string/bucket"
            android:textColor="@drawable/state_selected_c3_c23"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/tvRadix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/color10"
            android:padding="10dp"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/radix"
            android:textColor="@drawable/state_selected_c3_c23" />

    </GridLayout>
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifBubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bubble_sort"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>