<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".algorithm.BucketActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input"
        android:textColor="@color/color3"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_marginStart="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etNum"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_80"
        android:lines="1"
        android:maxLength="2"
        android:textColor="@color/color3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvInput"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_num"
        android:textColor="@color/color3"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="@+id/tvInput"
        app:layout_constraintTop_toBottomOf="@+id/tvInput" />

    <TextView
        android:id="@+id/tvCreateNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="@+id/tvInput"
        app:layout_constraintTop_toBottomOf="@+id/tvRandom" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_result"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/color3"
        app:layout_constraintStart_toStartOf="@+id/tvInput"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateNum" />

    <TextView
        android:id="@+id/tvSortResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="@+id/tvInput"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />


</androidx.constraintlayout.widget.ConstraintLayout>